Bug 338362 - Recently used column in kickoff is problematic and leads to crash
Summary: Recently used column in kickoff is problematic and leads to crash
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Kubuntu Linux
: NOR crash
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-18 20:57 UTC by Antonis G.
Modified: 2016-02-01 21:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Debug information (46.45 KB, text/plain)
2014-08-18 20:57 UTC, Antonis G.
Details
Screenshot (83.32 KB, image/png)
2014-08-18 20:58 UTC, Antonis G.
Details
Debug log whith threadweaver dbg installed (64.60 KB, text/plain)
2014-08-18 21:07 UTC, Antonis G.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Antonis G. 2014-08-18 20:57:26 UTC
Created attachment 88310 [details]
Debug information

Screencast: http://www.mediafire.com/download/4802sdd72nu0y26/vokoscreen-2014-08-18_22-36-14.mkv

- What I was doing when the application crashed:
You can observe the attached video recorded at the time this crash occured

- Unusual behavior I noticed:
Applications launched from favourites are not added to the list, while when searching and launching them, they are added.
There are duplicate document categories.
Also duplicate entries in the same document category (shown in the attached screenshot)
Weird behavior when trying to clear recent applications (one entry from Documents disappears while the applications are not cleared)
And plasmashell finally crashes when trying to clear recent documents.

Also related to bug 336746 which I mistacenly closed.

Project neon 5, local install, packages from 18-8-2014
Comment 1 Antonis G. 2014-08-18 20:58:15 UTC
Created attachment 88311 [details]
Screenshot

Duplicate entries in the same category
Comment 2 Antonis G. 2014-08-18 21:07:34 UTC
Created attachment 88312 [details]
Debug log whith threadweaver dbg installed

This crash occured when I tried to launch a file I searched from kickoff, I think its the same bug
Comment 3 Antonis G. 2014-10-11 10:17:26 UTC
Still reproducible with arch linux 64bit self-compiled packages. How to reproduce:
1. Open Application Launcher
2. Search for a document
3. Open it
4. repeat 1,2
5. there now to same entries, one thouch is a .desktop file with the name of the document
6. Open the .desktop file
7. Reopen application launcher and go to recently used
8.  right click and select clear recent documents
crash
Btw it looks like a krunner/threadweaver bug, should I change the product?
Comment 4 David Edmundson 2014-12-19 09:53:38 UTC
Reproduced. Thanks. 

Will fix soon hopefully.
Comment 5 David Edmundson 2014-12-19 11:56:33 UTC
Git commit 29ff0a7717b09d231d748b7c65d8a7c3fce3c035 by David Edmundson.
Committed on 19/12/2014 at 10:28.
Pushed by davidedmundson into branch 'master'.

Fix crash in kickoff

When removing items we need to clear them from our hash of itemsByPath.
Otherwise subsequent calls which use this hash explode.
REVIEW: 121594

M  +5    -2    applets/kickoff/core/recentlyusedmodel.cpp

http://commits.kde.org/plasma-desktop/29ff0a7717b09d231d748b7c65d8a7c3fce3c035
Comment 6 Antonis G. 2014-12-21 17:20:30 UTC
The crash is fixed but all the problems that I discribed in my comment are still present. Should I create new bugs or reopen this one?
Comment 7 David Edmundson 2014-12-21 17:23:00 UTC
>The crash is fixed but all the problems that I discribed in my comment are still present. Should I create new bugs or reopen this one?

Oh sorry about that, I was too excited about getting something fixed.

It's generally a good idea to do one bug report per change.
Otherwise we can't track what we've done and what is left still to do.
Comment 8 Antonis G. 2014-12-22 08:21:32 UTC
Ok, here is one bug 342084 two more to go.
Comment 9 Antonis G. 2014-12-22 13:42:02 UTC
Here is another one ;) bug 342127
Comment 10 Antonis G. 2015-01-27 14:33:40 UTC
It still crashes (Managed to reproduce twice)
Comment 11 David Edmundson 2015-03-06 11:30:58 UTC
You say it still crashes, can you provide a version number and a new backtrace.
Comment 12 Antonis G. 2015-03-27 19:08:30 UTC
I will download kubuntu beta 2 and try to reproduce there, cause to get debug symbols, I need to build qt myself and I can't...
Comment 13 Antonis G. 2015-04-07 16:17:12 UTC
https://paste.kde.org/pkq20waxj its plasmashell 5.2.2 kf5 5.8.0