Fix crash in kickoff

When removing items we need to clear them from our hash of itemsByPath.
Otherwise subsequent calls which use this hash explode.

BUG: 338362
REVIEW: 121594